--- a/hie.yaml
+++ b/hie.yaml
@@ -2,3 +2,6 @@ cradle:
   cabal:
     - path: "./src"
       component: "lib:refined-simple"
+
+    - path: "./test/doctest"
+      component: "refined-simple:test:doctest"
