--- a/refined-simple.cabal
+++ b/refined-simple.cabal
@@ -19,11 +19,11 @@ description:
   .
   Differences from @refined@:
   .
-  * Only dependency is @TemplateHaskell@, giving @refined-simple@ a
-  significantly lighter dependency footprint.
+  * Only dependencies are @TemplateHaskell@ and @Text@, giving
+  @refined-simple@ a significantly lighter dependency footprint.
   * Predicate composition is a type-level list (like @facts@), not a
   combination of logical operators. This makes composition less general
-  than @refined@'s, but it is simpler and easier to work with.
+  than @refined@'s, but it is easier to work with.
   * @refined-simple@ provides fewer built-in predicates.
   .
   Differences from @facts@:
@@ -73,10 +73,12 @@ library
     Refined.Predicate.Class
     Refined.Predicate.Foldable
     Refined.Predicate.Math
+    Refined.Predicate.Text
 
   build-depends:
     , base              >=4.14.0.0 && <4.17
     , template-haskell  >=2.16.0.0 && <2.18
+    , text              ^>=1.2.3.2
 
   hs-source-dirs:   src
   default-language: Haskell2010
