--- a/.github/workflows/stack_ci.yaml
+++ b/.github/workflows/stack_ci.yaml
@@ -26,3 +26,6 @@ jobs:
 
       - name: Compile
         run: stack build --ghc-options="-Werror"
+      
+      - name: Test
+        run: stack test
