--- a/.github/workflows/style_ci.yaml
+++ b/.github/workflows/style_ci.yaml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches:
       - main
-  
+
   workflow_dispatch:
 
 jobs:
@@ -18,18 +18,27 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup nix
-        uses: cachix/install-nix-action@v12
+        uses: cachix/install-nix-action@v13
         with:
-          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/931ab058daa7e4cd539533963f95e2bb0dbd41e6.tar.gz
+          # Got hash from https://github.com/cachix/install-nix-action/issues/83
+          install_url: https://nixos-nix-install-tests.cachix.org/serve/pqndq1i9g5agiyr5iwwyl061s1c71kl6/install
+          install_options: '--tarball-url-prefix https://nixos-nix-install-tests.cachix.org/serve'
+          extra_nix_config: |
+            experimental-features = nix-command flakes
+            substituters = https://cache.nixos.org/ https://hydra.iohk.io
+            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
 
       - name: cabal-fmt
-        run: nix-shell nix/ci.nix --pure --command "bash ./ci_scripts/cabal-fmt.sh"
+        run: nix develop --command bash ./ci_scripts/cabal-fmt.sh
 
       - name: hlint
-        run: nix-shell nix/ci.nix --pure --command "bash ./ci_scripts/hlint.sh"
+        run: nix develop --command bash ./ci_scripts/hlint.sh
 
       - name: ormolu
-        run: nix-shell nix/ci.nix --pure --command "bash ./ci_scripts/ormolu.sh"
+        run: nix develop --command bash ./ci_scripts/ormolu.sh
 
       - name: nixpkgs-fmt
-        run: nix-shell nix/ci.nix --pure --command "bash ./ci_scripts/nixpkgs-fmt.sh"
+        run: nix develop --command bash ./ci_scripts/nixpkgs-fmt.sh
+
+      - name: haddock
+        run: nix develop --command bash ./ci_scripts/haddock.sh
