Add ghc 9.2.1 compatibility, update version CI.
- Have ghc-specific CI use a plain nix-shell rather than developPackage.
  This way we ensure that building with plain cabal works, and nix is not
  possibly covering up any errors. We previously avoided this because
  doctest was not working with nix-shell. But manually writing the
  ghc env files fixes that problem.

- Add Exception instance to RefineException.

- Add support for ghc 9.2.1. This would have been straightforward except that
  the doctests, for whatever reason, complain about the Typeable constraints
  on Predicate not being satisfied by the 'Predicate (Proxy '[]) a' instance.

  Specifically, it complains that it cannot deduce (Typeable k). At first
  glance this seems odd because there is no k type variable. My _guess_ is
  that this is referencing the hidden type variable in '[]. The 9.2.1 release
  notes mentions GHC being stricter about checking out-of-scope type vars in
  associated type families, but nothing jumps out as being obviously related.

  GHC #13895 seems possibly related (GHC can't infer that k ~ Type, so we
  don't get the Typeable constraint?), but I was not able to work around it.

  In any case, the simple solution was to remove the Typeable constraints from
  the typeclass and instead move them on the relevant functions and some
  instances. This typechecks and has no significant downsides as far as I can
  tell.

--- a/.github/workflows/ghc_9-0-1.yaml
+++ b/.github/workflows/ghc_9-0-1.yaml
@@ -20,10 +20,17 @@ jobs:
       - name: Setup nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/c71f061c68ba8ce53471b767d5049cbd0f3d8490.tar.gz
+          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/8a308775674e178495767df90c419425474582a1.tar.gz
 
       - name: Compile
-        run: nix-shell nix/ghc_9-0-1.nix --command "cabal build"
+        run: |
+          nix-shell nix/ghc_9-0-1.nix --command \
+            "cabal update && \
+             cabal build --write-ghc-environment-files=always"
 
       - name: Test
-        run: nix-shell nix/ghc_9-0-1.nix --command "cabal test"
+        run: |
+          nix-shell nix/ghc_9-0-1.nix --command \
+            "cabal update && \
+             cabal build --write-ghc-environment-files=always && \
+             cabal test"
